task7/gatekeeper/constraint-templates/privileged.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sdenyprivileged
spec:
  crd:
    spec:
      names:
        kind: K8sDenyPrivileged
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdenyprivileged

        all_containers[c] { c := input.review.object.spec.containers[_] }
        all_containers[c] { c := input.review.object.spec.initContainers[_] }
        all_containers[c] { c := input.review.object.spec.ephemeralContainers[_] }

        violation[{"msg": msg}] {
          c := all_containers[_]
          c.securityContext.privileged == true
          msg := sprintf("privileged: true запрещён (container=%v)", [c.name])
        }
